--- a/InternTask/package.json
+++ b/InternTask/package.json
@@ -13,7 +13,6 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.8",
-        "phosphor-icons": "^1.4.2"
+        "@popperjs/core": "^2.11.8"
     }
 }
